--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "stripe": "^17.5.0",
