--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@biomejs/biome": "1.9.4",
     "@eslint/eslintrc": "^3.3.1",
     "@types/node": "^20.17.50",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.21",
