🔧 修复Supabase邮件确认和认证状态同步问题
✅ 主要修复:
1. 邮件确认重定向问题
   - 新增 /api/auth/confirm 路由处理邮件确认回调
   - 注册时设置正确的邮件重定向URL
   - 确认成功后自动跳转到工具页面

2. 认证状态同步优化
   - 改善 useAuth 钩子的状态监听机制
   - 添加详细的认证事件日志
   - 优化认证状态变化处理

3. 用户体验改进
   - 工具页面添加邮件确认成功提示
   - 3秒后自动隐藏提示并清除URL参数
   - 确认流程完全无缝，无需手动刷新

📚 文档更新:
   - 新增 Supabase邮件确认配置指南
   - 更新环境变量示例说明
   - 提供详细的配置和故障排除指南

🚀 解决的用户反馈:
   - 邮件确认链接跳转到错误页面 ✅
   - 确认后需要刷新页面才能使用 ✅
   - 登录状态同步延迟问题 ✅

现在用户点击邮件确认链接后会直接跳转到工具页面并可以立即使用！

--- a/env.example
+++ b/env.example
@@ -10,6 +10,10 @@ NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
+# 注意：在Supabase控制台的Authentication -> URL Configuration中设置：
+# Site URL: https://yourdomain.com
+# Redirect URLs: https://yourdomain.com/api/auth/confirm
+
 # =============================================================================
 # 认证配置 (NextAuth)
 # =============================================================================
