refactor(auth): 全面重构为纯Supabase认证并增强安全性
- 彻底移除NextAuth，解决登录黑屏问题。
- 新增 useAuth 钩子和 AuthProvider。
- 强化API输入验证和安全日志。
- 修复依赖漏洞并完成全面安全审计。
- 详见 GIT_CHANGELOG.md

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "setup": "node scripts/quick-setup.js",
     "check": "node scripts/check-config.js",
     "check:supabase": "node scripts/check-supabase.js",
+    "verify:env": "node scripts/verify-env.js",
     "perf": "node scripts/performance-check.js",
     "analyze": "npm run build && npx @next/bundle-analyzer",
     "setup:env": "cp env.example .env.local && node scripts/check-config.js",
