feat(security): Complete security overhaul and hardening
This major update addresses a critical JWT secret leak and significantly hardens the application's security posture.

Key changes:
- Replaced compromised secrets with new, securely generated keys.
- Implemented a comprehensive .gitignore to prevent future secret leaks.
- Eradicated all hardcoded keys from the codebase, enforcing the use of environment variables.
- Cleansed the entire Git history of any previously committed sensitive files using git-filter-repo.
- Introduced a new pre-deployment security check script (
> nextjs-shadcn@0.1.0 security-check
> node scripts/security-check.js

--- Starting Pre-deployment Security Check ---

--- Scanning for Hardcoded Secrets ---
✅ No hardcoded secrets found.

--- Verifying Environment Variables ---

[Phase 1/2] Checking REQUIRED secrets...
✅ [OK] Required: "SUPABASE_SERVICE_ROLE_KEY" is set.

[Phase 2/2] Checking RECOMMENDED secrets...

✅ All required environment variables are correctly set.

--- Security Check Summary ---

🎉 [SUCCESS] All security checks passed. Ready to deploy!) to automate the detection of hardcoded keys and missing environment variables.
- Refactored payment security logic to fail safely and provide clear warnings if secrets are not configured, rather than using insecure defaults.
- Fixed a server-side rendering crash in  by providing a reliable fallback for .
- Enhanced the security check script to differentiate between required and recommended secrets, improving flexibility for different environments.

--- a/env.example
+++ b/env.example
@@ -88,4 +88,20 @@ NEXT_PUBLIC_PLAUSIBLE_DOMAIN=yourdomain.com
 # 开发环境下允许未验证邮箱登录
 DEV_ALLOW_UNVERIFIED_EMAIL=true
 # 开发环境下自动确认邮箱
-DEV_AUTO_CONFIRM_EMAIL=true 
+DEV_AUTO_CONFIRM_EMAIL=true
+
+# AI / 内容服务 (AI / CONTENT SERVICES)
+# -----------------------------------------------------------------------------
+# Replicate API 令牌
+# Replicate API Token
+REPLICATE_API_TOKEN="YOUR_REPLICATE_API_TOKEN"
+# Replicate 模型版本 (可选, 如果留空则使用代码中的默认值)
+# Replicate Model Versions (Optional, uses default from code if left empty)
+NEXT_PUBLIC_REPLICATE_REMOVE_MODEL_VERSION=""
+NEXT_PUBLIC_REPLICATE_ENHANCE_MODEL_VERSION=""
+
+# Fal.ai 密钥
+# Fal.ai Key
+FAL_KEY="YOUR_FAL_AI_KEY"
+# OpenAI API 密钥
+# ... existing code ... 
